# test-scrap

./: .pre-commit-config.yaml  README.md  docker-compose.yml  env.docker  env.example
.github/workflows/: README.md  deploy.yml  test.yml
adicionales/rabbitmq/: Dockerfile  definitions.json  enabled_plugins  rabbitmq.conf
docs/: DEPLOYMENT.md  DEVELOPMENT.md  README.md
publisher/: .dockerignore  Dockerfile  __init__.py  config.py  main.py  models.py  pyproject.toml
publisher/tests/: __init__.py  conftest.py  test_main.py
subscriber/: .dockerignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml
subscriber/config/: __init__.py  api_config.py  camoufox_config.py  categories.py  categories_config.py  monitoring_config.py  scraper_config.py  settings.py
subscriber/database/: __init__.py  products.sql
subscriber/database/connectors/: __init__.py  database_connector.py
subscriber/database/repositories/: __init__.py
subscriber/docs/: RATE_LIMITING_AND_RETRY.md
subscriber/examples/: rate_limiting_example.py
subscriber/manager/: __init__.py  cache_manager.py  rabbitmq_manager.py
subscriber/manager/listeners/: __init__.py  message_listener.py
subscriber/manager/workers/: __init__.py  worker.py
subscriber/models/: __init__.py  scraping_models.py
subscriber/output/: scraping_20250825_043433.json  scraping_20250825_043741.json  scraping_20250825_044010.json  scraping_20250825_131608.json  scraping_20250825_132034.json
subscriber/scraper/: __init__.py  browser.py  cli.py  simple_scraper.py  utils.py
subscriber/scraper/models/: __init__.py  models.py
subscriber/scraper/services/: __init__.py  scraper_service.py
subscriber/scraper/utils/: __init__.py  exception_handler.py  metrics.py  rate_limiter.py  utils.py
subscriber/tests/: FIXES_SUMMARY.md  README.md  conftest.py  test_main.py  test_rate_limiting.py  test_simple.py
subscriber/tests/manager/: test_cache_manager.py  test_rabbitmq_manager.py
subscriber/tests/manager/listeners/: test_message_listener.py
subscriber/tests/scraper/services/: test_scraper_service.py
validation_ia/: README.md  __init__.py  config.env.example  create_tables.sql  main.py  pyproject.toml
validation_ia/docs/: DEVELOPMENT.md  create_tables.sql
validation_ia/models/: models.py
validation_ia/modules/: database_connector.py  openia.py
validation_ia/tests/: README.md  __init__.py  conftest.py  test_main.py
validation_ia/tests/modules/: __init__.py  test_database_connector.py  test_openia.py
