[tool.poetry]
name = "validation-ia"
version = "0.1.0"
description = "Sistema de validación de datos de scraping usando IA Generativa"
authors = ["Daniel Murcia <daniel.murcia@mercadolibre.com.co>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
supabase = "^2.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.3"
typing-inspection = "^0.4.1"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"

[tool.poetry.scripts]
validate = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "ai: Tests that require AI/OpenAI",
    "database: Tests that require database connection"
]
pythonpath = ["."]